force-app/main/default/objects/DaScoopComposer__Tracked_Message_Event__c/DaScoopComposer__Tracked_Message_Event__c.object-meta.xml
<CustomObject>
    <label>Tracked Message Event</label>
    <nameField>
        <label>Event ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracked Message Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>