force-app/main/default/objects/DaScoopComposer__Tracked_Message_Event__c/fields/DaScoopComposer__Device_OS__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Device_OS__c</fullName>
    <label>Device OS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>