force-app/main/default/objects/DaScoopComposer__Tracked_Message_Event__c/fields/DaScoopComposer__Email_Client__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Email_Client__c</fullName>
    <inlineHelpText>indicates what email client the recipient was most likely using when the email was opened. If this field is blank the device could not be clearly identified (e.g because the recipient is using a Gmail client which obfuscates this information).</inlineHelpText>
    <label>Email Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>