force-app/main/default/objects/DaScoopComposer__Tracked_Message_Event__c/fields/DaScoopComposer__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__IP_Address__c</fullName>
    <inlineHelpText>Indicates the IP address that triggered the tracked message event</inlineHelpText>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>