force-app/main/default/objects/DaScoopComposer__Tracked_Message_Event__c/fields/DaScoopComposer__Tracked_Message__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Tracked_Message__c</fullName>
    <inlineHelpText>Indicates the tracked message to which the event belongs</inlineHelpText>
    <label>Tracked Message</label>
    <referenceTo>DaScoopComposer__Tracked_Message__c</referenceTo>
    <relationshipLabel>Tracked Message Events</relationshipLabel>
    <relationshipName>Tracked_Message_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>