force-app/main/default/objects/DaScoopComposer__Tracked_Message_Event__c/fields/DaScoopComposer__User_Agent__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__User_Agent__c</fullName>
    <inlineHelpText>Indicates the raw user agent string of the email client that triggered the tracked message event</inlineHelpText>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>