force-app/main/default/objects/DaScoopComposer__Tracked_Message_Event__c/fields/DaScoopComposer__When__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__When__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>is the date/time on which this event occurred (i.e. when the email was opened by the recipient).</inlineHelpText>
    <label>When</label>
    <type>DateTime</type>
</CustomField>