force-app/main/default/objects/DaScoopComposer__Tracked_Message_Event__c/listViews/DaScoopComposer__All.listView-meta.xml
<ListView>
    <fullName>DaScoopComposer__All</fullName>
    <columns>NAME</columns>
    <columns>DaScoopComposer__Tracked_Message__c</columns>
    <columns>DaScoopComposer__Type__c</columns>
    <columns>DaScoopComposer__When__c</columns>
    <columns>DaScoopComposer__Device__c</columns>
    <columns>DaScoopComposer__Device_OS__c</columns>
    <columns>DaScoopComposer__User_Agent__c</columns>
    <columns>DaScoopComposer__Email_Client__c</columns>
    <columns>DaScoopComposer__IP_Address__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>